Add new groups: Course admins and instructors may create and edit groups, add students to them List of groups are available in all places where old group has been showed

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -23,6 +23,18 @@
 .load-content {
 }
 
+.visible-on-parent-hover {
+	display: none;
+}
+
+*:hover > .visible-on-parent-hover {
+	display: initial;
+}
+
+.cursor-pointer {
+	cursor: pointer;
+}
+
 .popover-trigger {
 	text-decoration: none;
 	border-bottom: 1px dashed black;
