--- a/src/uLearn.Web/Views/Account/List.cshtml
+++ b/src/uLearn.Web/Views/Account/List.cshtml
@@ -16,7 +16,7 @@
 	@using (Html.BeginForm("List", "Account", FormMethod.Get, new { @class = "form-inline" }))
 	{
 		<input class="form-control" type="text" name="namePrefix" />
-		<button class="btn btn-default" class="button" type="submit">Фильтровать по имени</button>
+		<button class="btn btn-default button" type="submit">Фильтровать по имени</button>
 	}
 
 	@Html.Action("ListPartial", Model)
