--- a/src/uLearn.Web/Views/Admin/ManageMenu.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManageMenu.cshtml
@@ -5,6 +5,7 @@
 		<li class="units-list-item full-width units-list-item-text course-name">@Model.Title</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Пользователи", "Users", new { Model.CourseId, onlyPrivileged = true }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Комментарии", "Comments", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
+		<li class="units-list-item full-width">@Html.ActionLink("Группы", "Groups", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Управление пакетами", "Packages", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Диагностики", "Diagnostics", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
 		<li class="units-list-item full-width">@Html.ActionLink("Юниты", "List", new { Model.CourseId }, new { @class = "units-list-item-text" })</li>
