Make some fixes:
1. JoinToGroup → JoinGroup
2. Show username in group's members list
3. Styles

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1074,6 +1074,12 @@ table.analytics__user-answers {
 	margin-bottom: 0;
 }
 
+.groups .group .group__title .label {
+	position: relative;
+	top: -3px;
+}
+
 .groups .group .members {
 	margin-top: 10px;
 }
+
