--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -33,13 +33,13 @@
 					}
 				</h3>
 				<div class="text-muted" title="Отправьте эту ссылку студентам для присоединения к группе">
-					@Url.Action("JoinToGroup", "Account", new { hash = group.InviteHash }, protocol: Request.Url.Scheme)
+					@Url.Action("JoinGroup", "Account", new { hash = group.InviteHash }, protocol: Request.Url.Scheme)
 				</div>
 				<ol class="members">
 					@foreach (var member in group.Members.OrderBy(m => m.User.VisibleName))
 					{
 						<li class="member">
-							@member.User.VisibleName
+							@member.User.VisibleName (@member.User.UserName)
 							<span class="glyphicon glyphicon-remove  remove-user-from-group-link  text-danger visible-on-parent-hover  cursor-pointer" data-group-id="@group.Id" data-user-id="@member.User.Id" title="Удалить из группы"></span>
 						</li>
 					}
@@ -53,7 +53,6 @@
 					}
 					else
 					{
-						<br/>
 						<div>Добавить пользователя:</div>
 					}
 					<input type="text" class="add-user-to-group-input form-control" data-group-id="@group.Id" placeholder="Начните вводить имя или фамилию">
