Enable and disable group's invite link Copy invite link

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -48,6 +48,14 @@
 	border-bottom-color: #2a6496;
 }
 
+.clipboard-link {
+	cursor: pointer;
+}
+
+.ib {
+	display: inline-block;
+}
+
 .popover-trigger {
 	text-decoration: none;
 	border-bottom: 1px dashed black;
