--- a/src/uLearn.Web/Views/Account/JoinGroup.cshtml
+++ b/src/uLearn.Web/Views/Account/JoinGroup.cshtml
@@ -1,11 +1,11 @@
-﻿@model UserCourseModel
+﻿@model string
 
 @{
 	ViewBag.Title = "Присоединться к группе";
 }
 
 <div class="container">
-	<h1>Присоединиться к группе</h1>
+	<h1>Присоединиться к группе «@Model»</h1>
 
 	<form method="POST" action="">
 		@Html.AntiForgeryToken()
