--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -5,9 +5,7 @@
 	ViewBag.Title = "Группы";
 }
 
-@Html.Action("ManageMenu")
-
-<div class="slide-container">
+<div class="container">
 
 	<h1>Группы <small><a href="" class="create-group-link  internal-page-link">создать</a></small></h1>
 	
