--- a/src/uLearn.Web/Views/Admin/Units.cshtml
+++ b/src/uLearn.Web/Views/Admin/Units.cshtml
@@ -1,13 +1,11 @@
 ﻿@model uLearn.Web.Controllers.UnitsListViewModel
 
 @{
-	ViewBag.Title = "Юниты";
+	ViewBag.Title = "Модули";
 }
 
-@Html.Action("ManageMenu")
-
-<div class="slide-container">
-	<h2>Юниты</h2>
+<div class="container">
+	<h1>Модули</h1>
 
 	<table class="table table-autowidth">
 		<tr>
