--- a/src/uLearn.Web/Views/Account/List.cshtml
+++ b/src/uLearn.Web/Views/Account/List.cshtml
@@ -1,23 +1,25 @@
 ﻿@model UserSearchQueryModel
 
 @{
-	ViewBag.Title = "Admin Users";
+	ViewBag.Title = "Пользователи";
 }
 
 <div class="container">
-	<h2>Роли пользователей</h2>
+	<h2>Пользователи</h2>
 
 	<p><a class="label label-danger" href="@Url.Action("List", new { role = LmsRoles.SysAdmin })">@LmsRoles.SysAdmin</a> может всё.</p>
-	<p><a class="label label-warning" href="@Url.Action("List", new { courseRole = CourseRole.CourseAdmin })">@CourseRole.CourseAdmin</a> может видеть служебную информацию и управлять ролями других пользователей.</p>
-	<p><a class="label label-info" href="@Url.Action("List", new { courseRole = CourseRole.Instructor })">@CourseRole.Instructor</a> может видеть статистику по успеваемости на разных слайдах, задачах, тестах. Читать заданные вопросы.</p>
+	<p><a class="label label-warning" href="@Url.Action("List", new { courseRole = CourseRole.CourseAdmin })">@CourseRole.CourseAdmin</a> может видеть служебную информацию и управлять ролями других пользователей в рамках курса.</p>
+	<p><a class="label label-info" href="@Url.Action("List", new { courseRole = CourseRole.Instructor })">@CourseRole.Instructor</a> может видеть статистику по успеваемости, проверять работы, отвечать на комментарии.</p>
 	<p><a class="label label-success" href="@Url.Action("List", new { courseRole = CourseRole.Tester })">@CourseRole.Tester</a> может видеть ещё не опубликованные для всех материалы.</p>
 	<p><a class="label label-default" href="@Url.Action("List")">обычный пользователь</a> может видеть только опубликованные материалы.</p>
-	
-	@using (Html.BeginForm("List", "Account", FormMethod.Get, new { @class = "form-inline" }))
-	{
-		<input class="form-control" type="text" name="namePrefix" />
-		<button class="btn btn-default button" type="submit">Фильтровать по имени</button>
-	}
+
+	<p>
+		@using (Html.BeginForm("List", "Account", FormMethod.Get, new { @class = "form-inline" }))
+		{
+			<input class="form-control" type="text" name="namePrefix" />
+			<button class="btn btn-primary button" type="submit">Фильтровать по имени</button>
+		}
+	</p>
 
 	@Html.Action("ListPartial", Model)
 
