New header for admins and instructors
Show user's visible names in users list

--- a/src/uLearn.Web/Views/Admin/Comments.cshtml
+++ b/src/uLearn.Web/Views/Admin/Comments.cshtml
@@ -1,4 +1,5 @@
-﻿@model uLearn.Web.Controllers.AdminCommentsViewModel
+﻿@using ApprovalUtilities.Utilities
+@model uLearn.Web.Controllers.AdminCommentsViewModel
 
 @{
 	ViewBag.Title = "Комментарии";
@@ -8,42 +9,60 @@
 
 	<h1>Комментарии</h1>
 
-	@using (Html.BeginForm("SaveCommentsPolicy", "Admin", FormMethod.Post, new { @class = "form-horizontal" }))
+	@{
+		var is_form_disabled = !User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin);
+		var disabled_attributes = is_form_disabled ?
+			new Dictionary<string, object> { { "disabled", "disabled" } } :
+			new Dictionary<string, object>();
+	}
+	@using (Html.BeginForm("SaveCommentsPolicy", "Admin", FormMethod.Post))
 	{
 		@Html.AntiForgeryToken()
-		<input type="hidden" name="courseId" value="@Model.CourseId" />
+
+		<input type="hidden" name="courseId" value="@Model.CourseId"/>
 
 		<div class="checkbox checkbox-default">
-			@Html.CheckBox("isCommentsEnabled", Model.IsCommentsEnabled)
+			@Html.CheckBox("isCommentsEnabled", Model.IsCommentsEnabled, disabled_attributes)
 			<label for="isCommentsEnabled">
 				Комментарии включены
 			</label>
 		</div>
 
 		<div class="checkbox checkbox-default">
-			@Html.CheckBox("onlyInstructorsCanReply", Model.OnlyInstructorsCanReply)
+			@Html.CheckBox("onlyInstructorsCanReply", Model.OnlyInstructorsCanReply, disabled_attributes)
 			<label for="onlyInstructorsCanReply">
 				Отвечать могут только преподаватели
 			</label>
 		</div>
 
-		<h4>Режим модерации</h4>
+		<h3 @Html.Raw(is_form_disabled ? "class=\"text-muted\"" : "")>Режим модерации</h3>
 		<div class="radio radio-default">
-			@Html.RadioButton("moderationPolicy", "Premoderation", Model.ModerationPolicy == CommentModerationPolicy.Premoderation, new { @id= "moderationPolicyPremoderation" })
+			@{
+				var radioAttributes = disabled_attributes;
+				radioAttributes["id"] = "moderationPolicyPremoderation";
+			}
+			@Html.RadioButton("moderationPolicy", "Premoderation", Model.ModerationPolicy == CommentModerationPolicy.Premoderation, radioAttributes)
 			<label for="moderationPolicyPremoderation">
 				премодерация
 			</label>
 		</div>
 
 		<div class="radio radio-defaul">
-			@Html.RadioButton("moderationPolicy", "Postmoderation", Model.ModerationPolicy == CommentModerationPolicy.Postmoderation, new { @id = "moderationPolicyPostmoderation" })
+			@{
+				radioAttributes["id"] = "moderationPolicyPostmoderation";
+			}
+			@Html.RadioButton("moderationPolicy", "Postmoderation", Model.ModerationPolicy == CommentModerationPolicy.Postmoderation, radioAttributes)
 			<label for="moderationPolicyPostmoderation">
 				постмодерация
 			</label>
 		</div>
 
-		<div>
-			<button class="btn btn-success" type="submit">Сохранить</button>
+		<div class="">
+			<button class="btn btn-success" type="submit" @(is_form_disabled ? "disabled" : "")>Сохранить</button>
+			@if (is_form_disabled)
+			{
+				<span class="text-muted">Менять настройки могут только администраторы</span>
+			}
 		</div>
 	}
 
