--- a/src/uLearn.Web/Views/Admin/ManualQuizChecksQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizChecksQueue.cshtml
@@ -32,7 +32,7 @@
 	@if (Model.Checks.Count == 0)
 	{
 		<div class="alert alert-success">Поздравляем, очередь пуста! Работ для проверки нет</div>
-		<div>Здесь будут появляться ответы студентов на тесты, которые должны быть проверены инструктором вручную.</div>
+		<div class="text-muted">Здесь будут появляться ответы студентов на тесты, которые должны быть проверены инструктором вручную.</div>
 	}
 
 	@foreach (var checkModel in Model.Checks)
