--- a/src/uLearn.Web/Views/Admin/Users.cshtml
+++ b/src/uLearn.Web/Views/Admin/Users.cshtml
@@ -13,7 +13,7 @@
 	</p>
 	<p><a class="label label-success" href="@Url.Action("Users", new { Model.CourseId, courseRole = CourseRole.Tester })">@CourseRole.Tester</a> может видеть ещё не опубликованные для всех материалы.
 	</p>
-	<p><a class="label label-default" href="@Url.Action("Users", new { Model.CourseId })">обычный пользователь</a> может видеть только опубликованные материалы.
+	<p><a class="label label-default" href="@Url.Action("Users", new { Model.CourseId })">Обычный пользователь</a> может видеть только опубликованные материалы.
 	</p>
 
 	<p>
